--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+/* Вспомогательные стили */
+/* Для подсветки блоков */
+/*
+
+  background: rgba(184, 110, 165, 0.2);
+  box-shadow: inset 0 0 0 2px rgb(184, 110, 165);
+
+  background: rgba(54, 194, 89, 0.2);
+  box-shadow: inset 0 0 0 2px rgb(54, 194, 89);
+
+  background: rgba(216, 95, 14, 0.2);
+  box-shadow: inset 0 0 0 2px rgb(216, 95, 14);
+
+  background: rgba(255, 45, 82, 0.2);
+  box-shadow: 0 0 0 3px rgb(255, 45, 82);
+ */
+
 body {
   margin: 0;
   padding: 0;
@@ -14,6 +31,32 @@ a {
   text-decoration: none;
 }
 
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 10px;
+
+  /* background: rgba(255, 45, 82, 0.2);
+  box-shadow: 0 0 0 3px rgb(255, 45, 82); */
+}
+
+.main-header-wrapper {
+  width: 100%;
+  background-color: #eeeeee;
+}
+
+.main-navigation .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nerds-logo {
+  width: 160px;
+
+  background: rgba(216, 95, 14, 0.2);
+  box-shadow: inset 0 0 0 2px rgb(216, 95, 14);
+}
+
 .nerds-logo:hover {
   opacity: 0.8;
 }
@@ -23,28 +66,65 @@ a {
 }
 
 .main-navigation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   font-size: 16px;
   line-height: 30px;
   font-weight: 500;
   text-transform: uppercase;
 
   color: #000000;
-  background-color: #eeeeee;
 }
 
 .slider-list {
+  margin: 0;
+  padding: 0;
   list-style: none;
   background-color: #eeeeee;
 }
 
+.slider-item {
+  display: flex;
+  justify-content: space-between;
+  min-height: 438px;
+}
+
+.slider-text-wrapper {
+  width: 560px;
+
+  /* background: rgba(184, 110, 165, 0.2);
+  box-shadow: inset 0 0 0 2px rgb(184, 110, 165); */
+}
+
 .slider-slogan {
   font-size: 55px;
+  line-height: 55px;
   font-weight: 700px;
 }
 
 .slider-description {
   font-size: 16px;
   line-height: 24px;
+}
+
+.site-navigation {
+  margin: 0;
+  padding: 0;
+  width: 760px;
+
+  background: rgba(184, 110, 165, 0.2);
+  box-shadow: inset 0 0 0 2px rgb(184, 110, 165);
+}
+
+.user-navigation {
+  margin: 0;
+  padding: 0;
+  width: 160px;
+
+  background: rgba(54, 194, 89, 0.2);
+  box-shadow: inset 0 0 0 2px rgb(54, 194, 89);
 }
 
 .site-navigation,
